# facharbeit

./: .gitignore  CONTRIBUTING.md  Cargo.toml  PLAN.md  README.md  add.eres  bibliography.yaml  facharbeit.typ  factorial.eres  hallo.abc  presentation.typ  syntax.eres
.github/workflows/: deploy-pages.yml
crates/eres_abi/: Cargo.toml
crates/eres_abi/src/: lib.rs
crates/eres_abi_macros/: Cargo.toml
crates/eres_abi_macros/src/: lib.rs
crates/eres_std/: Cargo.toml
crates/eres_std/src/: lib.rs
editors/vscode/: README.md  language-configuration.json  package-lock.json  package.json  tsconfig.json
editors/vscode/src/: extension.ts
editors/vscode/syntaxes/: eres.tmLanguage.json
examples/: add_compare.eres  check_aggregates.eres  check_match.eres  check_refs_enums.eres  check_strings.eres  module_strings_helper.eres  module_strings_main.eres  run_arith.eres  run_float_cond.eres  run_strings.eres
playground/: README.md  app.js  index.html  style.css
scripts/: build-playground.sh
src/: analysis.rs  ast.rs  compiler.rs  diagnostics.rs  host.rs  lexer.rs  lib.rs  loader.rs  main.rs  parser.rs  runner.rs  runtime.rs  token.rs  typing.rs
src/codegen/: expr.rs  ir.rs  mod.rs  module.rs  stmt.rs
src/lsp/: backend.rs  mod.rs  source_map.rs
