[package]
name = "facharbeit"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["rlib", "cdylib"]

[dependencies]
clap = { version = "4.5.53", features = ["derive"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
wasm-encoder = "0.243.0"
wasmprinter = "0.243.0"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
wasmtime = "40.0.0"

[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = "0.1.7"
wasm-bindgen = "0.2.105"
